@@ -353,6 +353,7 @@ extern struct cb_exception	cb_exception_table[];
 
 #undef	CB_CONFIG_ANY
 #undef	CB_CONFIG_INT
+#undef	CB_CONFIG_SIZE
 #undef	CB_CONFIG_STRING
 #undef	CB_CONFIG_BOOLEAN
 #undef	CB_CONFIG_SUPPORT
@@ -516,6 +517,8 @@ extern void		cobc_print_usage_flags (void);
 extern type			var;
 #define	CB_CONFIG_INT(var,name,min,max,odoc,doc)	\
 extern unsigned int		var;
+#define	CB_CONFIG_SIZE(var,name,min,max,odoc,doc)	\
+extern unsigned long	var;
 #define	CB_CONFIG_STRING(var,name,doc)	\
 extern const char		*var;
 #define	CB_CONFIG_BOOLEAN(var,name,doc)	\
@@ -527,6 +530,7 @@ extern enum				cb_support var;
 
 #undef	CB_CONFIG_ANY
 #undef	CB_CONFIG_INT
+#undef	CB_CONFIG_SIZE
 #undef	CB_CONFIG_STRING
 #undef	CB_CONFIG_BOOLEAN
 #undef	CB_CONFIG_SUPPORT
