@@ -66,6 +66,9 @@ CB_CONFIG_INT (cb_lit_length, "literal-length", 1, COB_MAX_LITERAL_LEN, _("<numb
 CB_CONFIG_INT (cb_numlit_length, "numeric-literal-length", 1, COB_MAX_DIGITS, CB_XRANGE(1,COB_MAX_DIGITS),
 	_("maximum numeric literal size"))
 
+CB_CONFIG_INT (cb_ws_align_record, "ws-align-record", 0, 64, CB_XRANGE(0,64),
+	_("align WORKING-STORAGE record on boundary"))
+
 
 /* Flags with required parameter and special values */
 
