@@ -254,6 +254,7 @@ assign-variable:			unconformable
 assign-using-variable:			unconformable
 assign-ext-dyn:				ok
 assign-disk-from:			unconformable
+ws-align-record: 4 
 
 # use fixed word list, synonyms and exceptions specified there
 reserved-words:		ACU
