@@ -251,6 +251,7 @@ assign-variable:			unconformable
 assign-using-variable:			ok
 assign-ext-dyn:				unconformable
 assign-disk-from:			unconformable
+ws-align-record: 8 
 
 # use fixed word list, synonyms and exceptions specified there
 reserved-words:		BS2000
