@@ -248,6 +248,7 @@ assign-variable:			unconformable
 assign-using-variable:			ok
 assign-ext-dyn:				unconformable
 assign-disk-from:			unconformable
+ws-align-record: 0
 
 
 # archaic in COBOL2002 and currently not available as dialect features:
