@@ -248,6 +248,7 @@ assign-variable:			unconformable
 assign-using-variable:			ok
 assign-ext-dyn:				unconformable
 assign-disk-from:			unconformable
+ws-align-record: 0
 
 # use fixed word list, synonyms and exceptions specified there
 reserved-words:		COBOL2014
