@@ -248,6 +248,7 @@ assign-variable:			unconformable
 assign-using-variable:			unconformable
 assign-ext-dyn:				unconformable
 assign-disk-from:			unconformable
+ws-align-record: 0
 
 # obsolete in COBOL85 and currently not available as dialect features:
 # 1: All literal with numeric or numeric edited item
