@@ -260,6 +260,7 @@ assign-variable:			ok
 assign-using-variable:			ok
 assign-ext-dyn:				ok
 assign-disk-from:			ok
+ws-align-record: 0
 
 # use complete word list; synonyms and exceptions are specified below
 reserved-words:		default
