@@ -252,6 +252,7 @@ assign-variable:			unconformable
 assign-using-variable:			unconformable
 assign-ext-dyn:				ok
 assign-disk-from:			ok
+ws-align-record: 8
 
 # use fixed word list, synonyms and exceptions specified there
 reserved-words:		MF
