@@ -248,6 +248,7 @@ assign-variable:			unconformable
 assign-using-variable:			unconformable
 assign-ext-dyn:				unconformable
 assign-disk-from:			unconformable
+ws-align-record: 8
 
 # use fixed word list, synonyms and exceptions specified there
 reserved-words:		MVS
