@@ -256,6 +256,7 @@ assign-variable:			ok
 assign-using-variable:			unconformable
 assign-ext-dyn:				unconformable
 assign-disk-from:			unconformable
+ws-align-record: 4
 
 # obsolete in COBOL85 and currently not available as dialect features:
 # 1: All literal with numeric or numeric edited item
