@@ -415,6 +415,7 @@ test.conf: missing definitions:
 	no definition of 'word-length'
 	no definition of 'literal-length'
 	no definition of 'numeric-literal-length'
+	no definition of 'ws-align-record'
 	no definition of 'standard-define'
 	no definition of 'binary-size'
 	no definition of 'binary-byteorder'
@@ -428,7 +429,6 @@ test.conf: missing definitions:
 	no definition of 'larger-redefines-ok'
 	no definition of 'relax-syntax-checks'
 	no definition of 'relax-level-hierarchy'
-	no definition of 'select-working'
 	no definition of 'sticky-linkage'
 	no definition of 'move-ibm'
 	no definition of 'perform-osvs'
