@@ -1,4 +1,8 @@
 
+2020-03-28  Ron Norman <rjn@inglenet.com>
+
+	* general: added option ws-align-record
+
 2020-03-27  Simon Sobisch <simonsobisch@gnu.org>
 
 	* general: removed option "select-working" (see bug #421)
